<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/dateLabel" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/dateLabel"
        android:hint="@string/date_format" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/priceLabel" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_tv"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="85dp"
        android:layout_toEndOf="@+id/priceLabel"
        android:hint="@string/priceHint"
        android:inputType="numberDecimal"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/sellernameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="97dp"
        android:layout_toEndOf="@+id/sellername_tv"
        android:hint="@string/nameHint"
        android:inputType="text"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/selleremailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellernameET"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:layout_toEndOf="@+id/selleremail_tv"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/sellerphoneET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selleremailET"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="97dp"
        android:layout_toEndOf="@+id/sellerphone_tv"
        android:hint="@string/numberHint"
        android:inputType="phone"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/productnameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerphoneET"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="98dp"
        android:layout_toEndOf="@+id/sellerphone_tv"
        android:hint="@string/productNameHint"
        android:inputType="text"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/purchaseLocationET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/productnameET"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="98dp"
        android:layout_toEndOf="@+id/sellerphone_tv"
        android:hint="@string/purchaseLocationHint"
        android:inputType="text"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceLabel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="29dp"
        android:text="@string/categoryLabel" />

    <TextView
        android:id="@+id/sellername_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myReceipt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/sellerNameLabel" />

    <TextView
        android:id="@+id/selleremail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sellername_tv"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/sellerEmailLabel" />

    <TextView
        android:id="@+id/sellerphone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selleremail_tv"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/sellerPhoneLabel" />

    <TextView
        android:id="@+id/productname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sellerphone_tv"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/productNameLabel" />
    <TextView
        android:id="@+id/purchaseLocation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productname_tv"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/purchaseLocationLabel" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="82dp" />

    <ImageView
        android:id="@+id/myReceipt"
        android:layout_width="166dp"
        android:layout_height="234dp"
        android:layout_below="@+id/categoryLabel"
        android:layout_marginStart="10dp"
        android:layout_marginTop="31dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categorySpinner"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="205dp"
        android:layout_toEndOf="@+id/myReceipt"
        android:adjustViewBounds="true"
        android:background="@null"
        app:srcCompat="@drawable/camera_icon" />

    <Button
        android:id="@+id/addwarrantybt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="282dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#4CAF50"
        android:text="Add Warranty"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        tools:ignore="HardcodedText" />

</RelativeLayout>