<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/dateLabel" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/dateLabel"
        android:hint="@string/date_format" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/priceLabel" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_tv"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="85dp"
        android:layout_toEndOf="@+id/priceLabel"
        android:hint="Price"
        android:inputType="numberDecimal"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceLabel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="29dp"
        android:text="@string/categoryLabel" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="82dp"
        android:layout_toEndOf="@+id/categoryLabel" />

</RelativeLayout>