<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSellerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="145dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/snameLabel"
        />

    <TextView
        android:id="@+id/tvSellerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSellerName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="145dp"
        android:layout_toEndOf="@+id/phoneLabel"
         />

    <TextView
        android:id="@+id/tvSellerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSellerPhone"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="145dp"
        android:layout_toEndOf="@+id/emailLabel"
        />

    <TextView
        android:id="@+id/tvDateOfPurchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSellerEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="145dp"
        android:layout_toEndOf="@+id/dateLabel"
        />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDateOfPurchase"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="145dp"
        android:layout_toEndOf="@+id/pnameLabel"
        />

    <TextView
        android:id="@+id/tvProductCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProductName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="145dp"
        android:layout_toEndOf="@+id/categoryLabel"
        />

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProductCategory"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="125dp"
        android:layout_toEndOf="@+id/priceLabel"
        />
    <TextView
        android:id="@+id/tvPurchaseLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProductPrice"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="125dp"
        android:layout_toEndOf="@+id/purchaseLocationLabel"
        />

    <TextView
        android:id="@+id/snameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/sellerNameLabel" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/snameLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/sellerPhoneLabel" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phoneLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/sellerEmailLabel" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/dateLabel" />

    <TextView
        android:id="@+id/pnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/productNameLabel" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/pnameLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/categoryLabel" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/categoryLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/priceLabel" />
    <TextView
        android:id="@+id/purchaseLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/priceLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/purchaseLocationLabel" />


</RelativeLayout>